Add service filter
